# OpinionCarry

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  models.py
app/clients/: opinion_client.py
app/jobs/: refresh_job.py
app/services/: cache.py  hold_filter.py  market_collector.py  markets_cache.py  ws_price_stream.py
data/: markets_cache.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
tests/: test_hold_filter.py  test_market_collector.py
